# android-vulkan

./: .gitmodules
MyApplication/app/: build.gradle
MyApplication/app/src/androidTest/java/com/waddahex/myapplication/: ExampleInstrumentedTest.java
MyApplication/app/src/main/java/com/waddahex/myapplication/: MainActivity.java
MyApplication/app/src/test/java/com/waddahex/myapplication/: ExampleUnitTest.java
MyApplication/gradle/: libs.versions.toml
MyApplication/gradle/wrapper/: gradle-wrapper.properties
android_vulkan/: settings.gradle
android_vulkan/app/: build.gradle
android_vulkan/app/src/androidTest/java/com/waddahex/android_vulkan/: ExampleInstrumentedTest.java
android_vulkan/app/src/main/: AndroidManifest.xml
android_vulkan/app/src/main/res/values/: strings.xml  themes.xml
android_vulkan/app/src/main/res/values-night/: themes.xml
android_vulkan/app/src/test/java/com/waddahex/android_vulkan/: ExampleUnitTest.java
android_vulkan/gradle/: libs.versions.toml
android_vulkan/gradle/wrapper/: gradle-wrapper.properties
engine/: CMakeLists.txt  compile-shaders.sh
engine/src/: logger.hpp  main.cpp
